force-app/main/default/objects/Activity/fields/cirrusadv__First_Reply__c.field-meta.xml
<CustomField>
    <fullName>cirrusadv__First_Reply__c</fullName>
    <inlineHelpText>The date this email was first replied to by one of the recipients.</inlineHelpText>
    <label>First Reply</label>
    <type>DateTime</type>
</CustomField>