force-app/main/default/objects/Activity/fields/cirrusadv__isTracked__c.field-meta.xml
<CustomField>
    <fullName>cirrusadv__isTracked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that opens of this email will be tracked and reported by Cirrus Insight.</inlineHelpText>
    <label>Tracked</label>
    <type>Checkbox</type>
</CustomField>