force-app/main/default/objects/Activity/fields/cirrusadv__Num_of_Replies__c.field-meta.xml
<CustomField>
    <fullName>cirrusadv__Num_of_Replies__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number of times this email has been replied to.</inlineHelpText>
    <label># of Replies</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>