force-app/main/default/objects/Activity/fields/cirrusadv__Outcome__c.field-meta.xml
<CustomField>
    <fullName>cirrusadv__Outcome__c</fullName>
    <inlineHelpText>The outcome selected as part of a Cirrus Insight Flight.</inlineHelpText>
    <label>Outcome</label>
    <length>80</length>
    <type>Text</type>
</CustomField>