force-app/main/default/objects/Activity/fields/cirrusadv__Template_Name__c.field-meta.xml
<CustomField>
    <fullName>cirrusadv__Template_Name__c</fullName>
    <inlineHelpText>The email template used.</inlineHelpText>
    <label>Template Name</label>
    <length>180</length>
    <type>Text</type>
</CustomField>