force-app/main/default/objects/Activity/fields/CRMG_GTM__Attended__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Attended__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Attended</label>
    <type>Checkbox</type>
</CustomField>