force-app/main/default/objects/Activity/fields/CRMG_GTM__GTM__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__GTM__c</fullName>
    <formula>HYPERLINK(&apos;/apex/CRMG_GTM__MeetingDetails?id=&apos; +  CRMG_GTM__Meeting__c , &apos;View Details&apos; )</formula>
    <label>GTM</label>
    <type>Text</type>
</CustomField>