force-app/main/default/objects/Activity/fields/CRMG_GTM__Meeting__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Meeting__c</fullName>
    <label>Meeting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>