force-app/main/default/objects/Activity/fields/CRMG_GTM__Meeting_Id__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Meeting_Id__c</fullName>
    <label>Meeting Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>