force-app/main/default/objects/Activity/fields/CRMG_GTM__Meeting_status__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Meeting_status__c</fullName>
    <label>Meeting Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invited</fullName>
                <default>true</default>
                <label>Invited</label>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Tentative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>