force-app/main/default/objects/Activity/fields/CRMG_GTM__Rescheduled_Meetings__c.field-meta.xml
<CustomField>
    <fullName>CRMG_GTM__Rescheduled_Meetings__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Rescheduled Meetings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>