force-app/main/default/objects/Activity/fields/joinme__Host_IP__c.field-meta.xml
<CustomField>
    <fullName>joinme__Host_IP__c</fullName>
    <label>Host IP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>