force-app/main/default/objects/Activity/fields/joinme__Meeting_Code__c.field-meta.xml
<CustomField>
    <fullName>joinme__Meeting_Code__c</fullName>
    <externalId>true</externalId>
    <label>Meeting Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>