force-app/main/default/objects/Activity/fields/joinme__Number_of_Participants__c.field-meta.xml
<CustomField>
    <fullName>joinme__Number_of_Participants__c</fullName>
    <label>Number of Participants</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>