force-app/main/default/objects/Activity/fields/joinme__Presenter_Email__c.field-meta.xml
<CustomField>
    <fullName>joinme__Presenter_Email__c</fullName>
    <label>Presenter Email</label>
    <type>Email</type>
</CustomField>