force-app/main/default/objects/Activity/fields/joinme__Presenter_Name__c.field-meta.xml
<CustomField>
    <fullName>joinme__Presenter_Name__c</fullName>
    <label>Presenter Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>